@@ -4,6 +4,7 @@
 - Fix compilation with -Wl,--as-needed (bug #5103).
 - Don't crash when the quit action button is pressed (bug #5118).
 - Properly set the systray orientation property (bug #5149).
+- Fix xfce-hvbox not working with gtk 2.16 (bug #5166).
 
 
 4.6.0
